# ladis

./: .gitignore  CMakeLists.txt  liste_jeux.txt
browser/: filters.py  index.jinja2  main.py  match.jinja2  views.py
include/: LADIS.h  SDL_config.h  agent.h
modules/: CMakeLists.txt
modules/asterix/: Agent.cpp  CMakeLists.txt  main.cpp
modules/dames/: Agent.cpp  Agent.h  CMakeLists.txt  Checkers.cpp  Checkers.h  HumanPolicy.h  Minimax.h  MinimaxPolicy.cpp  MinimaxPolicy.h  Policy.cpp  Policy.h  Tournament.cpp  Tournament.h  UniformPolicy.cpp  log.txt  main.cpp  run.py
modules/dames/stats/: log.txt  parse.py
modules/dames_2020/: Agent.cpp  Agent.h  Arena.cpp  Arena.h  CMakeLists.txt  MinimaxAgent.cpp  MinimaxAgent.h  ReinforcementLearningAgent.cpp  Sensor.h  UniformAgent.cpp  UniformAgent.h  main.cpp  move_results.py  tmp.cpp
modules/dames_core/: Agent.h  CMakeLists.txt  Checkers.cpp  Checkers.h  EpsilonGreedyAgent.cpp  GraphVizHook.cpp  HumanPolicy.cpp  Minimax.h  MinimaxPolicy.cpp  MinimaxPolicy.h  ModelBasedAgent.cpp  RNG.h  StateSequence.h  Tournament.cpp  Tournament.h  UniformAgent.h  UniformPolicy.h  export_font.py
modules/dames_test/: main.cpp
modules/dames_train/: ActionDataset.cpp  ActionDataset.h  CMakeLists.txt  LogLoader.h  main.cpp
modules/lecompteestbon/: Agent.cpp  Agent.h  CMakeLists.txt  Segmentation.cpp  Segmentation.h  Solver.cpp  main.cpp
modules/simulator/: CMakeLists.txt
modules/simulator/include/ladis/: LADIS_glue.h
modules/simulator/include/public/: LADIS.h  LADIS_keys.h
modules/simulator/include/sdl/: SDL_keysym.h
modules/simulator/src/dosbox/: dosbox.cpp
modules/simulator/src/dosbox/cpu/: core_dynrec.cpp  core_full.cpp
modules/simulator/src/dosbox/gui/: sdlmain.cpp
modules/simulator/src/dosbox/misc/: cross.cpp  setup.cpp
modules/simulator/src/dosbox/shell/: shell.cpp
modules/simulator/src/ladis/: core.cpp
modules/simulator/src/sdl/video/dummy/: SDL_nullevents.c  SDL_nullvideo.c
modules/tombraider/: Agent.cpp
src/: CMakeLists.txt  agent.cpp  core.cpp
src/agents/: CMakeLists.txt  Database.h  ExperimentalAgent.cpp  ExperimentalAgent.h  MatchLog.cpp  MatchLog.h  MinimaxAgent.cpp  MinimaxAgent.h  MySQLDatabase.cpp  MySQLDatabase.h  SaverAgent.cpp  SaverAgent.h  UniformAgent.cpp  UniformAgent.h
src/checkers/: CMakeLists.txt  Checkers.cpp  Checkers.h
src/controller/: Agent.h  CMakeLists.txt  CheckersBase.h  Controller.cpp  Controller.h  Utils.cpp  Utils.h  compile_font.py
src/emulator/: CMakeLists.txt
src/emulator/include/interface/: EmulatorInternals.h
src/emulator/include/public/: Emulator.h  EmulatorKeycodes.h
src/emulator/include/sdl/: SDL_keysym.h
src/emulator/src/dosbox/: config.h  control.h  render.h
src/emulator/src/dosbox/cpu/: cpu.cpp  paging.cpp
src/emulator/src/dosbox/dos/: dos_execute.cpp
src/emulator/src/dosbox/gui/: midi.cpp  render_templates_sai.h  sdlmain.cpp
src/emulator/src/dosbox/hardware/: iohandler.cpp  mixer.cpp  vga_crtc.cpp
src/emulator/src/dosbox/misc/: support.cpp
src/emulator/src/interface/: Emulator.cpp  EmulatorInternals.cpp
src/emulator/src/sdl/video/dummy/: SDL_nullevents.c  SDL_nullvideo.c
src/example/: CMakeLists.txt  Database.cpp  Database.h  main.cpp
src/explore/: CMakeLists.txt  main.cpp
src/old/asterix/: Agent.h  CMakeLists.txt  main.cpp
src/old/dames_2020/: Arena.cpp  Arena.h  Sensor.cpp  main.cpp
src/old/dames_core/: CMakeLists.txt  Checkers.cpp  Checkers.h  EpsilonGreedyAgent.h  GraphVizHook.h  Model.cpp  Model.h  ModelBasedAgent.h  RNG.cpp  ReinforcementLearningAgent.h  StateSequence.cpp  UniformAgent.cpp
src/old/dames_test/: CMakeLists.txt
src/old/dames_train/: ActionDataset.cpp  ActionDataset.h  DatasetSubset.cpp  DatasetSubset.h  LogLoader.cpp
src/old/lecompteestbon/: Agent.cpp  Solver.h  UnionFind.h
src/old/tombraider/: Agent.h  CMakeLists.txt  main.cpp
src/sdl/video/dummy/: SDL_nullevents.c  SDL_nullvideo.c
src/tmp/: CMakeLists.txt  main.cpp
src/train/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  Trainer.cpp  Trainer.h  TransitionList.h  TransitionLoader.cpp  TransitionLoader.h  main.cpp
src/video/dummy/: SDL_nullvideo.c
tools/: build_report.py  dump.py  import_old_logs.py
