#add_subdirectory(tombraider)
#add_subdirectory(simulator)
#add_subdirectory(asterix)
#add_subdirectory(lecompteestbon)
#add_subdirectory(dames_core)
#add_subdirectory(dames_2020)
#add_subdirectory(dames_test)
#add_subdirectory(dames_train)

add_subdirectory(emulator)
add_subdirectory(controller)
add_subdirectory(example)

