
add_library(
    emulator
    SHARED

    src/interface/Emulator.cpp

    src/sdl/file/SDL_rwops.c
    src/sdl/audio/SDL_audiocvt.c
    src/sdl/audio/SDL_mixer_m68k.c
    src/sdl/audio/SDL_audiodev.c
    src/sdl/audio/SDL_mixer_MMX_VC.c
    src/sdl/audio/SDL_wave.c
    src/sdl/audio/dummy/SDL_dummyaudio.c
    src/sdl/audio/SDL_mixer.c
    src/sdl/audio/SDL_mixer_MMX.c
    src/sdl/audio/SDL_audio.c
    src/sdl/cpuinfo/SDL_cpuinfo.c
    src/sdl/main/dummy/SDL_dummy_main.c
    src/sdl/SDL_error.c
    src/sdl/thread/SDL_thread.c
    src/sdl/thread/pthread/SDL_sysmutex.c
    src/sdl/thread/pthread/SDL_syscond.c
    src/sdl/thread/pthread/SDL_systhread.c
    src/sdl/thread/pthread/SDL_syssem.c
    src/sdl/events/SDL_quit.c
    src/sdl/events/SDL_expose.c
    src/sdl/events/SDL_mouse.c
    src/sdl/events/SDL_resize.c
    src/sdl/events/SDL_events.c
    src/sdl/events/SDL_active.c
    src/sdl/events/SDL_keyboard.c
    src/sdl/video/SDL_pixels.c
    src/sdl/video/SDL_stretch.c
    src/sdl/video/SDL_bmp.c
    src/sdl/video/SDL_gamma.c
    src/sdl/video/SDL_RLEaccel.c
    src/sdl/video/SDL_video.c
    src/sdl/video/SDL_blit_0.c
    src/sdl/video/SDL_blit_1.c
    src/sdl/video/SDL_yuv_mmx.c
    src/sdl/video/dummy/SDL_nullevents.c
    src/sdl/video/dummy/SDL_nullmouse.c
    src/sdl/video/dummy/SDL_nullvideo.c
    src/sdl/video/SDL_blit.c
    src/sdl/video/SDL_yuv_sw.c
    src/sdl/video/SDL_blit_A.c
    src/sdl/video/SDL_cursor.c
    src/sdl/video/SDL_blit_N.c
    src/sdl/video/SDL_surface.c
    src/sdl/video/SDL_yuv.c
    src/sdl/SDL.c
    src/sdl/timer/SDL_timer.c
    src/sdl/timer/dummy/SDL_systimer.c
    src/sdl/timer/unix/SDL_systimer.c
    src/sdl/cdrom/linux/SDL_syscdrom.c
    src/sdl/cdrom/dummy/SDL_syscdrom.c
    src/sdl/cdrom/SDL_cdrom.c
    src/sdl/joystick/linux/SDL_sysjoystick.c
    src/sdl/joystick/dummy/SDL_sysjoystick.c
    src/sdl/joystick/SDL_joystick.c
    src/sdl/stdlib/SDL_string.c
    src/sdl/stdlib/SDL_iconv.c
    src/sdl/stdlib/SDL_qsort.c
    src/sdl/stdlib/SDL_malloc.c
    src/sdl/stdlib/SDL_stdlib.c
    src/sdl/stdlib/SDL_getenv.c
    src/sdl/SDL_fatal.c

    src/dosbox/ints/int10_video_state.cpp
    src/dosbox/ints/mouse.cpp
    src/dosbox/ints/int10_put_pixel.cpp
    src/dosbox/ints/int10_misc.cpp
    src/dosbox/ints/ems.cpp
    src/dosbox/ints/bios_keyboard.cpp
    src/dosbox/ints/bios.cpp
    src/dosbox/ints/int10_modes.cpp
    src/dosbox/ints/xms.cpp
    src/dosbox/ints/bios_disk.cpp
    src/dosbox/ints/int10.h
    src/dosbox/ints/int10_char.cpp
    src/dosbox/ints/int10_vesa.cpp
    src/dosbox/ints/int10_vptable.cpp
    src/dosbox/ints/int10_memory.cpp
    src/dosbox/ints/int10.cpp
    src/dosbox/ints/int10_pal.cpp
    src/dosbox/ints/xms.h
    src/dosbox/misc/programs.cpp
    src/dosbox/misc/messages.cpp
    src/dosbox/misc/setup.cpp
    src/dosbox/misc/support.cpp
    src/dosbox/misc/cross.cpp
    src/dosbox/cpu/core_dynrec/risc_armv4le-o3.h
    src/dosbox/cpu/core_dynrec/decoder.h
    src/dosbox/cpu/core_dynrec/risc_armv4le-thumb-niw.h
    src/dosbox/cpu/core_dynrec/operators.h
    src/dosbox/cpu/core_dynrec/cache.h
    src/dosbox/cpu/core_dynrec/decoder_opcodes.h
    src/dosbox/cpu/core_dynrec/risc_mipsel32.h
    src/dosbox/cpu/core_dynrec/risc_armv4le-thumb.h
    src/dosbox/cpu/core_dynrec/decoder_basic.h
    src/dosbox/cpu/core_dynrec/risc_x64.h
    src/dosbox/cpu/core_dynrec/risc_armv4le.h
    src/dosbox/cpu/core_dynrec/risc_armv4le-thumb-iw.h
    src/dosbox/cpu/core_dynrec/dyn_fpu.h
    src/dosbox/cpu/core_dynrec/risc_armv4le-common.h
    src/dosbox/cpu/core_dynrec/risc_x86.h
    src/dosbox/cpu/core_dynrec/risc_armv4le-s3.h
    src/dosbox/cpu/core_prefetch.cpp
    src/dosbox/cpu/paging.cpp
    src/dosbox/cpu/core_full.cpp
    src/dosbox/cpu/instructions.h
    src/dosbox/cpu/core_full/optable.h
    src/dosbox/cpu/core_full/save.h
    src/dosbox/cpu/core_full/loadwrite.h
    src/dosbox/cpu/core_full/ea_lookup.h
    src/dosbox/cpu/core_full/op.h
    src/dosbox/cpu/core_full/load.h
    src/dosbox/cpu/core_full/string.h
    src/dosbox/cpu/core_full/support.h
    src/dosbox/cpu/callback.cpp
    src/dosbox/cpu/modrm.h
    src/dosbox/cpu/modrm.cpp
    src/dosbox/cpu/core_dyn_x86/decoder.h
    src/dosbox/cpu/core_dyn_x86/cache.h
    src/dosbox/cpu/core_dyn_x86/helpers.h
    src/dosbox/cpu/core_dyn_x86/dyn_fpu.h
    src/dosbox/cpu/core_dyn_x86/string.h
    src/dosbox/cpu/core_dyn_x86/dyn_fpu_dh.h
    src/dosbox/cpu/core_dyn_x86/risc_x86.h
    src/dosbox/cpu/core_normal.cpp
    src/dosbox/cpu/core_dynrec.cpp
    src/dosbox/cpu/flags.cpp
    src/dosbox/cpu/lazyflags.h
    src/dosbox/cpu/core_dyn_x86.cpp
    src/dosbox/cpu/cpu.cpp
    src/dosbox/cpu/core_normal/prefix_none.h
    src/dosbox/cpu/core_normal/helpers.h
    src/dosbox/cpu/core_normal/prefix_66.h
    src/dosbox/cpu/core_normal/string.h
    src/dosbox/cpu/core_normal/prefix_0f.h
    src/dosbox/cpu/core_normal/support.h
    src/dosbox/cpu/core_normal/table_ea.h
    src/dosbox/cpu/core_normal/prefix_66_0f.h
    src/dosbox/cpu/core_simple.cpp
    src/dosbox/fpu/fpu_instructions_x86.h
    src/dosbox/fpu/fpu.cpp
    src/dosbox/fpu/fpu_instructions.h
    src/dosbox/platform/visualc/ntddscsi.h
    src/dosbox/platform/visualc/config.h
    src/dosbox/platform/visualc/ntddcdrm.h
    src/dosbox/platform/visualc/unistd.h
    src/dosbox/dosbox.cpp
    src/dosbox/gui/render_templates.h
    src/dosbox/gui/midi.cpp
    src/dosbox/gui/render_templates_hq3x.h
    src/dosbox/gui/render.cpp
    src/dosbox/gui/dosbox_logo.h
    src/dosbox/gui/render_templates_sai.h
    src/dosbox/gui/render_templates_hq.h
    src/dosbox/gui/sdl_mapper.cpp
    src/dosbox/gui/render_scalers.h
    src/dosbox/gui/midi_win32.h
    src/dosbox/gui/render_simple.h
    src/dosbox/gui/midi_alsa.h
    src/dosbox/gui/render_templates_hq2x.h
    src/dosbox/gui/sdlmain.cpp
    src/dosbox/gui/dosbox_splash.h
    src/dosbox/gui/midi_oss.h
    src/dosbox/gui/midi_coremidi.h
    src/dosbox/gui/render_loops.h
    src/dosbox/gui/midi_coreaudio.h
    src/dosbox/gui/render_scalers.cpp
    src/dosbox/hardware/vga_draw.cpp
    src/dosbox/hardware/iohandler.cpp
    src/dosbox/hardware/disney.cpp
    src/dosbox/hardware/dbopl.h
    src/dosbox/hardware/ipxserver.cpp
    src/dosbox/hardware/adlib.h
    src/dosbox/hardware/ipx.cpp
    src/dosbox/hardware/gameblaster.cpp
    src/dosbox/hardware/opl.cpp
    src/dosbox/hardware/tandy_sound.cpp
    src/dosbox/hardware/vga_dac.cpp
    src/dosbox/hardware/vga_paradise.cpp
    src/dosbox/hardware/gus.cpp
    src/dosbox/hardware/mame/saa1099.cpp
    src/dosbox/hardware/mame/saa1099.h
    src/dosbox/hardware/mame/emu.h
    src/dosbox/hardware/mame/sn76496.h
    src/dosbox/hardware/mame/sn76496.cpp
    src/dosbox/hardware/vga_seq.cpp
    src/dosbox/hardware/sblaster.cpp
    src/dosbox/hardware/pcspeaker.cpp
    src/dosbox/hardware/mixer.cpp
    src/dosbox/hardware/opl.h
    src/dosbox/hardware/hardware.cpp
    src/dosbox/hardware/vga_tseng.cpp
    src/dosbox/hardware/dma.cpp
    src/dosbox/hardware/timer.cpp
    src/dosbox/hardware/cmos.cpp
    src/dosbox/hardware/joystick.cpp
    src/dosbox/hardware/vga_attr.cpp
    src/dosbox/hardware/vga_s3.cpp
    src/dosbox/hardware/pic.cpp
    src/dosbox/hardware/mpu401.cpp
    src/dosbox/hardware/adlib.cpp
    src/dosbox/hardware/vga_xga.cpp
    src/dosbox/hardware/dbopl.cpp
    src/dosbox/hardware/vga_other.cpp
    src/dosbox/hardware/memory.cpp
    src/dosbox/hardware/vga_gfx.cpp
    src/dosbox/hardware/serialport/misc_util.h
    src/dosbox/hardware/serialport/misc_util.cpp
    src/dosbox/hardware/serialport/serialdummy.cpp
    src/dosbox/hardware/serialport/nullmodem.cpp
    src/dosbox/hardware/serialport/serialport.cpp
    src/dosbox/hardware/serialport/libserial.cpp
    src/dosbox/hardware/serialport/directserial.cpp
    src/dosbox/hardware/serialport/serialdummy.h
    src/dosbox/hardware/serialport/nullmodem.h
    src/dosbox/hardware/serialport/directserial.h
    src/dosbox/hardware/serialport/softmodem.h
    src/dosbox/hardware/serialport/softmodem.cpp
    src/dosbox/hardware/serialport/libserial.h
    src/dosbox/hardware/vga_misc.cpp
    src/dosbox/hardware/keyboard.cpp
    src/dosbox/hardware/vga_crtc.cpp
    src/dosbox/hardware/vga_memory.cpp
    src/dosbox/hardware/vga.cpp
    src/dosbox/shell/shell_cmds.cpp
    src/dosbox/shell/shell_misc.cpp
    src/dosbox/shell/shell.cpp
    src/dosbox/shell/shell_batch.cpp
    src/dosbox/dos/dos_tables.cpp
    src/dosbox/dos/dos_mscdex.cpp
    src/dosbox/dos/drives.h
    src/dosbox/dos/cdrom_ioctl_os2.cpp
    src/dosbox/dos/cdrom.h
    src/dosbox/dos/dos_programs.cpp
    src/dosbox/dos/dos_memory.cpp
    src/dosbox/dos/dos_codepages.h
    src/dosbox/dos/cdrom_ioctl_linux.cpp
    src/dosbox/dos/scsidefs.h
    src/dosbox/dos/dos_devices.cpp
    src/dosbox/dos/drive_iso.cpp
    src/dosbox/dos/dos_files.cpp
    src/dosbox/dos/dos_classes.cpp
    src/dosbox/dos/dos_ioctl.cpp
    src/dosbox/dos/dos.cpp
    src/dosbox/dos/drive_fat.cpp
    src/dosbox/dos/dev_con.h
    src/dosbox/dos/dos_keyboard_layout_data.h
    src/dosbox/dos/dos_execute.cpp
    src/dosbox/dos/wnaspi32.h
    src/dosbox/dos/drive_virtual.cpp
    src/dosbox/dos/dos_keyboard_layout.cpp
    src/dosbox/dos/drive_local.cpp
    src/dosbox/dos/drive_cache.cpp
    src/dosbox/dos/cdrom_image.cpp
    src/dosbox/dos/cdrom.cpp
    src/dosbox/dos/dos_misc.cpp
    src/dosbox/dos/cdrom_aspi_win32.cpp
    src/dosbox/dos/drives.cpp
    src/dosbox/dos/cdrom_ioctl_win32.cpp
)

target_link_libraries(emulator PUBLIC opencv_core)
target_link_libraries(emulator PRIVATE Threads::Threads)

target_include_directories(emulator PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/public")
target_include_directories(emulator PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/sdl")
target_include_directories(emulator PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/interface")
target_include_directories(emulator PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/dosbox")

